# pycounts_tripartio

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_tripartio/: __init__.py  pycounts.py
tests/: test_pycounts.py  test_pycounts_tripartio.py
