[tool.poetry]
name = "pycounts_tripartio"
version = "0.1.0"
description = "Calculate word counts in a text file"
authors = ["Chitu Okoli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
